# Colosseum

./: .gitignore  pyproject.toml
actor/: Dockerfile  actor_instance.py  arena_client.py  error.py  main.py
actor/config/: config.yaml
actor/environments/: __init__.py  base_environment.py  snake_3d.py  tic_tac_toe.py
arena/: Dockerfile  actor_client.py  arena_instance.py  error.py  main.py
deployment/: actor-statefulset.yaml  arena-deployment.yaml  common-config.yaml
learner/: learner_instance.py  main.py  replay.py
learner/clients/: __init__.py  actor_client.py  arena_client.py
learner/config/: config.yaml
learner/models/: __init__.py  base_model.py  snake3d.py
learner/models/rl/: __init__.py  actor_critic.py  encoder.py  ppo.py
